k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project1-ingress
  namespace: project1
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: project1.188.226.37.12.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project1-service
            port:
              number: 10000
